fixed function ids being buggy asf